# CAI_AMP_Synthetic_Data_Studio

./: .gitignore  .project-metadata.yaml  NOTICE.txt  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: client-build.yml  client-unit-test.yml  front-end-build.yml  front-end-unit-test.yml  python-app.yml
alembic/: env.py
alembic/versions/: 1a8fdc23eb6f_add_s3_export_path.py  5249999b91fa_initial_migration.py  9023b46c8d4c_initial_migration.py
app/: launch_streamlit.py  main.py  run.py  run_be.py  run_eval_job.py  run_export_job.py  run_job.py  text_examples.py
app/client/: .npmrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
app/client/offline_packages/: readme.md
app/client/src/: App.css  Container.tsx  constants.ts  index.css  main.tsx  routes.tsx  types.ts
app/client/src/api/: api.ts  hooks.ts  types.ts
app/client/src/api/Datasets/: datasets.ts  request.ts  (+1 more)
app/client/src/components/: Markdown.tsx  RouteAccessControl.tsx  TelemetryDashboard.tsx  TooltipIcon.tsx
app/client/src/pages/: ErrorPage.tsx
app/client/src/utils/: constants.ts  sortutils.ts
app/core/: config.py  data_analyser.py  data_loader.py  database.py  exceptions.py  model_endpoints.py  model_handlers.py  path_manager.py  prompt_templates.py  summary_formatter.py  telemetry.py  telemetry_integration.py  telemetry_middleware.py
app/migrations/: alembic_manager.py  alembic_schema_models.py
app/models/: reponse_models.py  request_models.py
app/old_code/frontend/: streamlit_app.py  streamlit_new_app.py
app/routes/: telemetry_routes.py
app/services/: aws_bedrock.py  check_guardrail.py  doc_extraction.py  evaluator_service.py  export_results.py  model_alignment.py  s3_export.py  synthesis_job.py  synthesis_service.py
docs/: architecture.mmd  technical_overview.md
docs/guides/: evaluation_workflow.md  sft_workflow.md
docs/guides/screenshots/: evaluation_workflow.md
tests/: conftest.py
tests/contract/: test_huggingface_export.py  test_model_contracts.py
tests/integration/: test_evaluate_api.py  test_synthesis_api.py
tests/mocks/: dummy_bedrock_client.py  mock_cmlapi.py  mock_db.py
tests/unit/: test_evaluator_service.py  test_model_handlers.py  test_synthesis_service.py
(+94 files in other folders)
