[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amp_synthetic_data_studio"
version = "0.1.0"
description = "Synthetic Data Studio Project"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "pydantic==2.10.4",
    "huggingface-hub==0.23.5",
    "datasets==2.20.0",
    "openai==1.57.2",
    "httpx==0.27.2",
    "nest_asyncio==1.5.8",
    "PyMuPDF==1.25.1",
    "python-docx==1.1.2",
    "alembic==1.14.1",
    "sqlalchemy==2.0.38",
    "boto3==1.35.48",
    "botocore==1.35.48",
    "awscli",
    "typing-extensions==4.12.2",
    "python-dotenv==1.0.0",
    "loguru==0.7.2",
    "pyflakes==3.2.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.3",
    "pytest-cov==6.0.0",
    "psutil==5.9.8",
]


[tool.hatch.build.targets.wheel]
packages = ["app"]